--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-API_URL=https://api.thecatapi.com/v1/breeds
+API_URL=https://api.thecatapi.com/v1
 X_API_KEY=bda53789-d59e-46cd-9bc4-2936630fde39
 IMAGES_BASE_URL=https://cdn2.thecatapi.com/images/
