--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  equatable: ^2.0.5
   flutter_dotenv: ^5.1.0
   flutter_screenutil: ^5.9.0
+  flutter_svg: ^2.0.10+1
   google_fonts: ^6.1.0
   http: ^1.2.1
   lottie: ^3.1.0
   provider: ^6.1.2
   shimmer: ^3.0.0
-  skeletonizer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
