--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.catbreeds"
-    compileSdk flutter.compileSdkVersion
+    compileSdk 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -64,4 +64,4 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {implementation "androidx.activity:activity:1.6.0-alpha05"}
